Fix More menu and search bar overlap

--- a/static/css/components/header-bar.less
+++ b/static/css/components/header-bar.less
@@ -174,7 +174,7 @@
     -webkit-box-ordinal-group: 6;
     -ms-flex-order: 5;
     order: 5;
-    z-index: @z-index-level-2;
+    z-index: @z-index-level-5;
 
     li {
       -ms-flex-preferred-size: 100%;
